--- a/inventario.html
+++ b/inventario.html
@@ -758,6 +758,64 @@
 
     // Inicializa: mostra “Overview” por padrão
     document.querySelector(".tab.active").click();
+// ====== Sistema de Atributos com Pontos ======
+
+let estado = {
+  nivel: 7,
+  xp: 6700,
+  xpMax: 10000,
+  pontosDisponiveis: 4,
+  atributos: {
+    forca: 12,
+    destreza: 10,
+    constituicao: 13,
+    inteligencia: 9,
+    espirito: 8,
+    carisma: 6,
+  },
+};
+
+function atualizarInterface() {
+  // XP
+  document.getElementById("nivel").textContent = estado.nivel;
+  document.getElementById("xp-bar").style.width = (estado.xp / estado.xpMax * 100) + "%";
+  document.getElementById("pontos-disponiveis").textContent = estado.pontosDisponiveis;
+
+  // Atributos
+  for (let key in estado.atributos) {
+    document.getElementById("valor-" + key).textContent = estado.atributos[key];
+    document.getElementById("barra-" + key).style.width = (estado.atributos[key] / 20 * 100) + "%";
+  }
+}
+
+function adicionarPonto(atributo) {
+  if (estado.pontosDisponiveis <= 0) return;
+  estado.atributos[atributo]++;
+  estado.pontosDisponiveis--;
+  atualizarInterface();
+}
+
+// (Opcional) Quando XP chegar ao máximo, subir nível
+function ganharXp(qtd) {
+  estado.xp += qtd;
+  while (estado.xp >= estado.xpMax) {
+    estado.xp -= estado.xpMax;
+    estado.nivel++;
+    estado.pontosDisponiveis += 2; // ganho por nível
+  }
+  atualizarInterface();
+}
+
+// ====== Inicialização ======
+document.addEventListener("DOMContentLoaded", function () {
+  document.querySelectorAll("[data-add]").forEach(btn => {
+    btn.addEventListener("click", () => {
+      const atributo = btn.getAttribute("data-add");
+      adicionarPonto(atributo);
+    });
+  });
+  atualizarInterface();
+});
   </script>
 </body>
 </html>
