Atualizar o inventario.html

--- a/inventario.html
+++ b/inventario.html
@@ -498,8 +498,8 @@
             Aqui vai um **resumo geral** do usuário.  
             Exemplo:
             <ul style="margin-top: 8px; list-style: disc inside; color: var(--text-light); opacity: 0.9;">
-              <li>Nome do herói: <strong>Ghoul Pionkim</strong></li>
-              <li>Descrição resumida: “O guerreiro envolto em armadura…”</li>
+              <li>Nome do herói: <strong>Seu Nome</strong></li>
+              <li>Descrição resumida: “None”</li>
             </ul>
           </div>
 
@@ -586,11 +586,6 @@
           <div class="left-title">Loja</div>
           <div class="left-text">Área da loja (mock).</div>
         </div>
-      </div>
-
-      <!-- CENTER PANEL (Avatar / Arte do Personagem) -->
-      <div class="center-panel">
-        <div class="avatar-placeholder">Avatar</div>
       </div>
 
       <!-- RIGHT PANEL (slots específicos de cada aba) -->
