Atualizar o inventario.html

--- a/inventario.html
+++ b/inventario.html
@@ -157,8 +157,6 @@
       position: relative;
     }
 
-    /*========== Conteúdo de cada aba ==========*/
-
     /*— Overview: “Quick Info” com labels + barras —*/
     .pane-overview {
       display: none;
@@ -481,7 +479,7 @@
     <button class="tab" data-tab="inventory">Inventário</button>
     <button class="tab" data-tab="equipment">Equipamento</button>
   <div class="tab-store-wrapper">
-    <button class="tab tab-store" onclick="window.location.href='store.html'">⛩ Loja</button>
+    <button class="tab-store" onclick="window.location.href='store.html'">⛩ Loja</button>
   </div>
 </div>
 
