Atualizar o inventario.html

--- a/inventario.html
+++ b/inventario.html
@@ -720,6 +720,9 @@
             </div>
           </div>
         </div>
+</div>
+</div>
+</div>
   <script>
     // ===== Seleção de abas (Top Tabs) =====
     const tabs = document.querySelectorAll(".tab");
